--- a/UniversityLibrary/Base.lproj/Main.storyboard
+++ b/UniversityLibrary/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TqB-qr-KuQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Nav Root View Controller-->
         <scene sceneID="ULC-HL-yLS">
             <objects>
-                <navigationController id="TqB-qr-KuQ" customClass="NavRootViewController" customModule="UniversityLibrary" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NavRootViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="TqB-qr-KuQ" customClass="NavRootViewController" customModule="UniversityLibrary" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MwR-CG-hUg">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
