--- a/UniversityLibrary/Storyboard/Base.lproj/Librarian.storyboard
+++ b/UniversityLibrary/Storyboard/Base.lproj/Librarian.storyboard
@@ -35,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Miw-2T-GYt">
-                                <rect key="frame" x="37" y="94" width="300.5" height="404"/>
+                                <rect key="frame" x="37" y="94" width="300.5" height="454.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Book" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qw3-QB-ahc">
                                         <rect key="frame" x="113" y="0.0" width="74.5" height="20.5"/>
@@ -44,7 +44,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="rkU-AC-MAm">
-                                        <rect key="frame" x="0.0" y="20.5" width="300.5" height="383.5"/>
+                                        <rect key="frame" x="0.0" y="20.5" width="300.5" height="404"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1Kt-Gy-VN8">
                                                 <rect key="frame" x="0.0" y="0.0" width="300.5" height="50.5"/>
@@ -167,7 +167,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CU4-jQ-JV8">
-                                                <rect key="frame" x="0.0" y="303" width="300.5" height="80.5"/>
+                                                <rect key="frame" x="0.0" y="303" width="300.5" height="50.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yqk-Aw-WHZ">
                                                         <rect key="frame" x="0.0" y="0.0" width="300.5" height="20.5"/>
@@ -184,14 +184,37 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FVq-kM-98P">
-                                                        <rect key="frame" x="0.0" y="50.5" width="300.5" height="30"/>
-                                                        <state key="normal" title="Add"/>
-                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="E6p-0C-bYN">
+                                                <rect key="frame" x="0.0" y="353.5" width="300.5" height="50.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Call number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spJ-1J-ncY">
+                                                        <rect key="frame" x="0.0" y="0.0" width="92" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Xb-ID-5Ww">
+                                                        <rect key="frame" x="0.0" y="20.5" width="300" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="300" id="5Cx-0T-V0b"/>
+                                                        </constraints>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
                                     </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FVq-kM-98P">
+                                        <rect key="frame" x="135.5" y="424.5" width="30" height="30"/>
+                                        <state key="normal" title="Add"/>
+                                        <connections>
+                                            <action selector="addBook:" destination="tVH-de-mDF" eventType="touchUpInside" id="GIA-mQ-fvj"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -202,10 +225,20 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YAi-zM-5rT"/>
                     </view>
+                    <connections>
+                        <outlet property="author" destination="sdv-ul-92b" id="LB7-Hn-41o"/>
+                        <outlet property="bookTitle" destination="qlP-uj-jWj" id="vvp-eA-YmU"/>
+                        <outlet property="callNumber" destination="5Xb-ID-5Ww" id="CFu-me-tGV"/>
+                        <outlet property="locationInLibrary" destination="1GL-Mh-QbN" id="fHB-VY-Rbc"/>
+                        <outlet property="numberOfCopies" destination="iOY-u1-l29" id="qA9-iN-gXY"/>
+                        <outlet property="publisher" destination="lml-fq-giU" id="bsA-Qb-Mna"/>
+                        <outlet property="title" destination="qlP-uj-jWj" id="Ldx-Yg-DsY"/>
+                        <outlet property="yearOfPublication" destination="PGX-aK-aqd" id="WGn-AX-Vv4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WE3-l7-86w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1308" y="-451"/>
+            <point key="canvasLocation" x="-1308" y="-451.12443778110946"/>
         </scene>
         <!--Search Book View Controller-->
         <scene sceneID="Bd0-9I-1qF">
